# plan-and-act-infer

./: .gitignore  README.md  env.example  pyproject.toml
configs/: settings.yaml  settings.yaml.template
docs/: 01_project_overview.md  02_directory_structure.md  03_agent_architecture.md  04_tool_integration_mcp.md  05_setup_with_uv.md  06_development_workflow.md
src/plan_and_act/cli/: __init__.py  run.py
src/plan_and_act/core/: __init__.py  agent_base.py  memory.py  planner.py  state.py  tools.py
src/plan_and_act/graphs/: __init__.py  inference_graph.py
src/plan_and_act/mcp/: __init__.py
src/plan_and_act/utils/: mcp_tools.py
tests/: conftest.py  test_dummy.py  test_memory.py  test_planner.py  test_tools.py
