[project]
name = "plan-and-act-infer"
version = "0.1.0"
description = "Plan-and-Act推論エージェントのリファレンス実装"
authors = ["Hajime Yagi <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.0.36",
  "langchain>=0.2.1",
  "langchain-mcp-adapters>=0.0.11",
  "typer>=0.12",
  "python-dotenv",
  "rich",
  "pytest",
  "ruff",
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  "pytest-httpx",
  "bump2version",
  "pre-commit"
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "Q", "RUF"]
ignore = []
fix = true
format = "default" 